# capao_urban_rate

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: alter_classification.ipynb  classificator.ipynb  ee_classification.ipynb
src/data/: capao_urban_rate.csv  capao_urban_rate_01.csv  dataset_bands_3.csv  dataset_bands_6.csv  urban_features.csv  vegetation_feature.csv
src/utils/: contants.py  features.py  utils.py
