[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capao-urban-rate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "python-dotenv==1.0.1",
  "earthengine-api",
  "geemap",
  "pandas",
  "numpy",
  "matplotlib",
  "scikit-learn"
]

[project.optional-dependencies]
dev = []
